// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MutePromptsSettingConfirm message rendering works for 24h 1`] = `
Object {
  "color": "#24292f",
  "mrkdwn_in": Array [
    "text",
  ],
  "text": "Prompts are muted for 24h :white_check_mark:
You can adjust this setting by invoking \`/github settings\`",
}
`;

exports[`MutePromptsSettingConfirm message rendering works indefinitely 1`] = `
Object {
  "color": "#24292f",
  "mrkdwn_in": Array [
    "text",
  ],
  "text": "Prompts are muted indefinitely :white_check_mark:
You can adjust this setting by invoking \`/github settings\`",
}
`;
